    run with additional option to abort when the tree as an unwanted
    shape, or to turn the tree into a DAG.

  - contains() can now take a twa as a second argument, not just a
    twa_graph.  This allows for instance to do contains(ltl, kripke)
    to obtain a simple model checker (that returns true or false,
    without counterexample).

New in spot 2.10.6  (2022-05-18)

  Bugs fixed:

  - Fix compilation error on MacOS X.

  - Using -Ffile/N to read column N of a CSV file would not reset the
    /N specification for the next file.

  - make_twa_graph() will now preserve state number when copying a
    kripke_graph object.  As a consequence, print_dot() and
    print_hoa() will now use state numbers matching those of the
    kripke_graph (issue #505).

  - Fix several compilation warning introduced by newer versions
    of GCC and Clang.

New in spot 2.10.5  (2022-05-03)

  Bugs fixed:

  - reduce_parity() produced incorrect results when applied to
    automata with deleted edges.

  - An optimization of Zielonka could result in incorrect results
    in some cases.

  - ltlsynt --print-pg incorrectly solved the game in addition to
    printing it.

  - ltlsynt would fail if only one of --ins or --outs was set, and
    if it was set empty.

  - Work around a portability issue in Flex 2.6.4 preventing
    compilation on OpenBSD.

  - Do not use the seq command in test cases, it is not available
    everywhere.

  - Do not erase the previous contents of the PYTHONPATH environment
    variable when running tests, prepend to it instead.

  - Simplify Debian instructions for LTO build to work around newer
    libtool version.

  - Fix invalid read in digraph::sort_edges_of_(), currently unused in
    Spot.

New in spot 2.10.4  (2022-02-01)

  Bug fixed:

  - Fix memory leaks in Python bindings for several iteration objects.
    This occured while itering on twa_graph.out(), twa_graph.edges(),
    twa_graph.univ_dests(), kripke_graph.out(), kripke_graph.edges(),